2006-08-17 [colin]	2.4.0cvs57

	* src/imap.c
		Add View Log button on auth error
	* src/procmsg.c
		Fix encrypted mail marked as new when
		saved in normal folders
	* src/plugins/pgpinline/pgpinline.c
		Fix encrypt bug on IMAP
	* src/mimeview.c
	* src/common/utils.c
	* src/common/utils.h
	* src/gtk/inputdialog.c
	* src/gtk/inputdialog.h
		Get rid of metamail stuff, simplify
		opening, and allow remembering of user's
		choices (by updating ~/.mailcap). There's
		still to drop "Audio player" and "Image
		viewer" preferences.

2006-08-17 [mones]	2.4.0cvs56

	* manual/es/sylpheed-claws-manual.xml
		fix DTD path

2006-08-17 [mones]	2.4.0cvs55

	* configure.ac
	* manual/Makefile.am
	* manual/es/Makefile.am
	* manual/es/account.xml
	* manual/es/ack.xml
	* manual/es/addrbook.xml
	* manual/es/advanced.xml
	* manual/es/faq.xml
	* manual/es/glossary.xml
	* manual/es/gpl.xml
	* manual/es/handling.xml
	* manual/es/intro.xml
	* manual/es/keyboard.xml
	* manual/es/plugins.xml
	* manual/es/starting.xml
	* manual/es/sylpheed-claws-manual.xml
	* manual/es/dist/Makefile.am
	* manual/es/dist/html/Makefile.am
	* manual/es/dist/pdf/Makefile.am
	* manual/es/dist/ps/Makefile.am
	* manual/es/dist/txt/Makefile.am
		Spanish translation for the manual

2006-08-16 [colin]	2.4.0cvs54

	* src/compose.c
	* src/main.c
	* src/mainwindow.c
		Fix send button sensitivity at startup
		Set send menu sensitivity (patch by Fabien)
	* src/ssl_manager.c
		Enable closing with esc (patch by Fabien)
	* src/gtk/foldersort.c
		Enable closing with esc (patch by Fabien)
	* src/procmime.c
		Optimisation (no need to copy to tempfile to
		"decode" 7bit and 8bit)
	* src/summaryview.c
		Fix cruft in swap_from case
	* src/textview.c
		Fix missing last line in some mail cases 
		(Fixes debian #381872)
	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpcore/sgpgme.h
		Don't show "no key found" when user explicitely
		wants to create a key

2006-08-16 [paul]	2.4.0cvs53

	* configure.ac