@@ -1749,3 +1749,4 @@
 ( cvs diff -u -r 1.654.2.1793 -r 1.654.2.1794 configure.ac;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 manual/Makefile.am;  diff -u /dev/null manual/es/Makefile.am;  diff -u /dev/null manual/es/account.xml;  diff -u /dev/null manual/es/ack.xml;  diff -u /dev/null manual/es/addrbook.xml;  diff -u /dev/null manual/es/advanced.xml;  diff -u /dev/null manual/es/faq.xml;  diff -u /dev/null manual/es/glossary.xml;  diff -u /dev/null manual/es/gpl.xml;  diff -u /dev/null manual/es/handling.xml;  diff -u /dev/null manual/es/intro.xml;  diff -u /dev/null manual/es/keyboard.xml;  diff -u /dev/null manual/es/plugins.xml;  diff -u /dev/null manual/es/starting.xml;  diff -u /dev/null manual/es/sylpheed-claws-manual.xml;  diff -u /dev/null manual/es/dist/Makefile.am;  diff -u /dev/null manual/es/dist/html/Makefile.am;  diff -u /dev/null manual/es/dist/pdf/Makefile.am;  diff -u /dev/null manual/es/dist/ps/Makefile.am;  diff -u /dev/null manual/es/dist/txt/Makefile.am;  ) > 2.4.0cvs55.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/sylpheed-claws-manual.xml;  ) > 2.4.0cvs56.patchset
 ( cvs diff -u -r 1.179.2.128 -r 1.179.2.129 src/imap.c;  cvs diff -u -r 1.83.2.78 -r 1.83.2.79 src/mimeview.c;  cvs diff -u -r 1.150.2.71 -r 1.150.2.72 src/procmsg.c;  cvs diff -u -r 1.36.2.74 -r 1.36.2.75 src/common/utils.c;  cvs diff -u -r 1.20.2.34 -r 1.20.2.35 src/common/utils.h;  cvs diff -u -r 1.2.2.16 -r 1.2.2.17 src/gtk/inputdialog.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/gtk/inputdialog.h;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/plugins/pgpinline/pgpinline.c;  ) > 2.4.0cvs57.patchset
+( cvs diff -u -r 1.83.2.79 -r 1.83.2.80 src/mimeview.c;  cvs diff -u -r 1.204.2.96 -r 1.204.2.97 src/prefs_common.c;  cvs diff -u -r 1.103.2.57 -r 1.103.2.58 src/prefs_common.h;  cvs diff -u -r 1.3.2.10 -r 1.3.2.11 src/prefs_ext_prog.c;  cvs diff -u -r 1.96.2.137 -r 1.96.2.138 src/textview.c;  ) > 2.4.0cvs58.patchset
